k8s/game-servers/modded-mc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modded-mc
  namespace: game-servers
  annotations:
    reloader.stakater.com/auto: "true"
    secrets.infisical.com/auto-reload: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: modded-mc
  template:
    metadata:
      labels:
        app: modded-mc
    spec:
      terminationGracePeriodSeconds: 120
      volumes:
        - name: modded-mc-data
          persistentVolumeClaim:
            claimName: modded-mc-data-26-1-2
        - name: bluemap-config
          configMap:
            name: modded-mc-bluemap-config
        - name: servercore-config
          configMap:
            name: modded-mc-servercore-config
        - name: spark-config
          configMap:
            name: modded-mc-spark-config
        - name: distant-horizons-config
          configMap:
            name: modded-mc-distant-horizons-config
        - name: chunksmith-config
          configMap:
            name: modded-mc-chunksmith-config
        - name: background-pregen-config
          configMap:
            name: modded-mc-background-pregen
      nodeSelector:
        kubernetes.io/hostname: s7
      containers:
        - name: modded-mc
          image: docker.io/itzg/minecraft-server:2026.10.0-java25@sha256:5a2ab74ae179c11e2dbbce67f307cdcf2c1257b3abb0f654d3a310b3d8ea57da
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
          resources:
            requests:
              memory: "20Gi"
              cpu: "4"
            limits:
              memory: "24Gi"
              cpu: "6"
          ports:
            - containerPort: 25565
              protocol: TCP
              name: minecraft
            - containerPort: 25566
              protocol: TCP
              name: cslod
            - containerPort: 8100
              protocol: TCP
              name: map
          volumeMounts:
            - name: modded-mc-data
              mountPath: /data
            - name: bluemap-config
              mountPath: /config/bluemap
              readOnly: true
            - name: servercore-config
              mountPath: /config/servercore
              readOnly: true
            - name: spark-config
              mountPath: /config/spark
              readOnly: true
            - name: distant-horizons-config
              mountPath: /config/DistantHorizons.toml
              subPath: DistantHorizons.toml
              readOnly: true
            - name: chunksmith-config
              mountPath: /config/chunksmith
              readOnly: true
            - name: background-pregen-config
              mountPath: /config/background-pregen
              readOnly: true
          startupProbe:
            exec:
              command:
                - mc-monitor
                - status
            failureThreshold: 120
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - mc-monitor
                - status
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - mc-monitor
                - status
            initialDelaySeconds: 30
            failureThreshold: 6
            periodSeconds: 30
            timeoutSeconds: 5
        - name: mc-monitor
          image: docker.io/itzg/mc-monitor:1.18.3@sha256:f30307791501a6eec4190f4b2c32296d5f17c6673aceb18943c5ed0f56f4edfe
          imagePullPolicy: IfNotPresent
          args:
            - export-for-prometheus
          ports:
            - containerPort: 9100
              protocol: TCP
              name: metrics
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 100m
