k8s/game-servers/modded-mc/webserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modded-mc-webserver
  namespace: game-servers
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: modded-mc-webserver
  template:
    metadata:
      labels:
        app: modded-mc-webserver
    spec:
      containers:
        - name: modded-mc-webserver
          image: caddy
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
              cpu: 256m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: modded-mc-webserver-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
            - name: modded-mc-webserver-index
              mountPath: /data/index.html
              subPath: index.html
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: modded-mc-webserver-config
          configMap:
            name: modded-mc-webserver
        - name: modded-mc-webserver-index
          configMap:
            name: modded-mc-webserver
