k8s/game-servers/modded-mc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: modded-mc
  namespace: game-servers
  labels:
    app: modded-mc
spec:
  selector:
    app: modded-mc
  ports:
    - port: 25565
      targetPort: minecraft
      protocol: TCP
      name: minecraft
    - port: 25566
      targetPort: cslod
      protocol: TCP
      name: cslod
    - port: 9100
      targetPort: metrics
      protocol: TCP
      name: metrics
    - port: 8100
      targetPort: map
      protocol: TCP
      name: map
