k8s/game-servers/modded-mc/webserver-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: modded-mc-webserver
  namespace: game-servers
spec:
  selector:
    app: modded-mc-webserver
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
