k8s/game-servers/modded-mc/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modded-mc-ingress
  namespace: game-servers
spec:
  tls:
    - hosts:
        - map.zefirsroyal.cloud
    - hosts:
        - dustmaxx.ing
      secretName: fifth-cert-prod
  rules:
    - host: map.zefirsroyal.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: modded-mc
                port:
                  name: map
    - host: dustmaxx.ing
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: modded-mc-webserver
                port:
                  name: http
