k8s/game-servers/modded-mc/minio-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: modded-mc-minio-ingress
  namespace: game-servers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: le
    domains:
      - main: dustmaxx.ing
  routes:
    - match: Host(`dustmaxx.ing`)
      kind: Rule
      services:
        - name: minio
          namespace: minio
          port: 9000
      middlewares:
        - name: add-minio-prefix
          namespace: game-servers

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-minio-prefix
  namespace: game-servers
spec:
  replacePath:
    path: /dustmaxxing-shit/index.html
